fixed a broken link 	modified:   HOW_S/gain.html

--- a/HOW_S/gain.html
+++ b/HOW_S/gain.html
@@ -192,7 +192,7 @@ or yellow LEDs, just one red led on each channel to warn of clipping.  The red s
 but the gain should be high enough so that they are on the verge of blinking.  (If it blinks 
 rarely, leave it alone until a practice session later.  It is a touchy adjustment and it is 
 easy to make it worse.)  The OBS software that receives the USB audio stream uses the convention that
-the louder portions of the signal should drive the VU meter into the yellow.  Yellow is goal to
+the louder portions of the signal should drive the VU meter into the yellow.  Yellow is the goal to
 achieve, but red is to be avoided.</p><br>
 
 <h1>Shure SLX wireless mic--pastor's mic</h1><p>
@@ -211,7 +211,7 @@ blinking or if the red light is occasionally blinking, switch to a lower gain se
 
 Following the signal chain from the pastor's microphone, through the pastor's bodypack and the 
 associated receiver, the signal then enters the Allan &amp; Heath mixer.  Once inside the mixer
-the signal passes through the <i>line pad</i> attenuator which is controlled by a small grey 
+the signal passes through the <i>line pad</i> attenuator which is controlled by a small white 
 pushbutton at the top of the mixer board.  If this switch is down, then the signal is attenuated 
 (weakened) by 20 dB.  (That's quite a lot.)  The general rule is that these buttons should be down 
 (line pad should be in use) unless the gain trim adjustment (discussed next) cannot be done 
@@ -225,15 +225,15 @@ about a volt or two.) and everything in-between.<br><br>
 
 <i>Alan &amp; Heath mixer&mdash;gain trim (red)</i><br>
 
-After the line pad, the signal goes through the gain trim adjustment.  This is used to match the
-signal level closely to the characteristic of the channel's first amplifier.  To monitor 
-the signal level at this point, watch the mini-VU meter just above the black fader (slider) for 
-that channel.  You want to see as much green as possible but rarely or never yellow and certainly 
-never red.  If the line-pad button is down and the gain trim is fully clockwise without getting 
-enough signal to activate two green LEDs on the mini-VU then it is necessary to let the line-pad 
-button up (take the line pad out of the circuit and give up its headroom).  Now it will be 
-possible to correctly set the gain trim.  
-<br><br>
+After the line pad, the signal goes through the gain trim adjustment, a red knob labeled "GAIN" 
+near the top of the mixer board.  This is used to match the signal level closely to the 
+characteristic of the channel's first amplifier.  To monitor the signal level at this point, 
+watch the mini-VU meter just above the black fader (slider) for that channel.  You want to 
+see as much green as possible but rarely or never yellow and certainly never red.  If the 
+line-pad button is down and the gain trim is fully clockwise without getting enough signal 
+to activate two green LEDs on the mini-VU then it is necessary to let the line-pad button 
+up (take the line pad out of the circuit and give up its headroom).  Now it will be possible 
+to correctly set the gain trim.  <br><br>
 
 Each channel of the mixer should be checked for gain-trim before each event.  This is because 
 vocalists and microphone setups vary.  If you presume that last week's settings will be OK, 
@@ -254,7 +254,7 @@ in conjunction with the headphone buss.  The headphone jack near the VU meter se
 from the VU meter to your ears.</p></td></tr></table>
 
 <table align="center" BORDER="0" CELLSPACING="0" CELLPADDING="0" WIDTH="590"><tr height="560"><td width="115">
-<img width="109" height="555" src="A_H_GS2400_headphone.png"></td><td align="left" valign="top"><p>
+<img width="109" height="555" src="A_H_GS2400_Headphone.png"></td><td align="left" valign="top"><p>
 <br><br><br>
 &larr; The sigal from the stereo VU meter goes to the headphones.<br>
 <br><br><br><br>
@@ -323,7 +323,7 @@ meter monitor the recording (2TRK) mix by default.</p><br>
 
 For a variety of reasons, if all channels have been properly gain-trimmed and a reasonable  
 mix is in progress, the VU levels of the recording mix (2TRK) will take care of themselves 
-and land in &ndash;3 to &ndash;12 range rather naturally.  Thus, monitoring the VU levels 
+and land in &ndash;3 to &ndash;12 dB range rather naturally.  Thus, monitoring the VU levels 
 of the recording mix is not a priority.  However, listening in the headphones to the 
 recording mix is a good thing to do periodically.  The recording mix normally will track 
 the sanctuary mix, but the AUX 5 and AUX 6 sends may be used to add additional signal to 
@@ -343,18 +343,19 @@ recording mix because they will be strongly present in the L-R mix.<br><br>
 
 <i>Exception 2.)  Miking of a musical source for the recording only</i><br>
 It is also possible to couple a signal only into the recording mix.  We usually do this 
-with the piano and the ambience channels (channels 23 and 24) and we do it in stereo.  
-In this case leave the L-R, 1-2, and 3-4 buss coupler buttons near the associated fader up.  
-The signal now cannot get into the L-R main mix nor will it be reproduced in the sanctuary 
-loudspeakers.  But by adding an <i>extra</i> amount of it to the recording mix via the 
-AUX 5 and AUX 6 sends (yellow knobs) these signals can still be mixed into the recording 
-mix via the channel faders.  Very often we use two microphones for these types of signals 
-and mix them in stereo.  Then the right microphone should have the AUX 5 send set to the 
-3 o'clock setting and the AUX 6 send set to full counterclockwise, coupling that signal 
-only into the right channel of the recording mix.  Similarly, the channel with the left 
-microphone should have the AUX 5 send fully counterclockwise and the AUX 6 fader at 
-3 o'clock.  (If only one microphone is used set all three coupler buttons up as for 
-stereo but set the associated AUX 5 and AUX 6 sends each to 2 o'clock.)</p><p><br>
+with the piano, choir, and the ambience channels (channels 23 and 24 are the ambience 
+channels) and we do it in stereo.  In this case leave the L-R, 1-2, and 3-4 buss coupler 
+buttons near the associated fader up.  The signal now cannot get into the L-R main mix 
+nor will it be reproduced in the sanctuary loudspeakers.  But by adding an <i>extra</i> 
+amount of it to the recording mix via the AUX 5 and AUX 6 sends (yellow knobs) these 
+signals can still be mixed into the recording mix via the channel faders.  Very often 
+we use two microphones for these types of signals and mix them in stereo.  Then the 
+right microphone should have the AUX 5 send set to the 3 o'clock setting and the AUX 6 
+send set to full counterclockwise, coupling that signal only into the right channel 
+of the recording mix.  Similarly, the channel with the left microphone should have 
+the AUX 5 send fully counterclockwise and the AUX 6 fader at 3 o'clock.  (If only 
+one microphone is used set all three coupler buttons up as for stereo but set the 
+associated AUX 5 and AUX 6 sends each to 2 o'clock.)</p><p><br>
 
 <h1>To be continued</h1></p><p>
 
