Published EGR 323 Canvas page for S21, fixed boo boos in HoW_Sound 	modified:   HOW_S/gain.html 	new file:   S21/323/323S19DN_edited_for_S21.HTM 	modified:   S21/323/323S21DN.HTM

--- a/HOW_S/gain.html
+++ b/HOW_S/gain.html
@@ -220,10 +220,10 @@ in order to handle the weakest microphone signals.  That means that this first a
 clip (distort) rather easily.  With the line pad switch the mixer channel can be adapted to 
 any type of signal from the weakest microphone (signals of just a few hundredths of a volt) 
 to headphone-jack level signals from consumer electronics such as a smartphone (a signal of 
-about a volt or two.) and everything in-between.<br><br>
+about a volt or two.) and everything in-between.</p><br>
 
 
-<i>Alan &amp; Heath mixer&mdash;gain trim (red)</i><br>
+<h1>Alan &amp; Heath mixer&mdash;gain trim (red)</h1><p>
 
 After the line pad, the signal goes through the gain trim adjustment, a red knob labeled "GAIN" 
 near the top of the mixer board.  This is used to match the signal level closely to the 
