--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -187,9 +187,9 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment--><font color=grey>No class, reading day.</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Test #1.</font><!--end comment--></td>  
    </TR><!-- Week of 2/21 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
@@ -207,15 +207,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
+   </TR><!-- Week of 2/28 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  1/21<!-- --</a><!-- --><br><!-- --<a href=
+	  3/01<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --</a><!-- --><br><!-- --<a href=
+      3/03<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
+      3/05<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
@@ -224,15 +224,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
+   </TR><!-- Week of 3/07 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  1/21<!-- --</a><!-- --><br><!-- --<a href=
+	  3/08<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --</a><!-- --><br><!-- --<a href=
+      3/10<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
+      3/12<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
@@ -241,15 +241,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
+   </TR><!-- Week of 3/14 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  1/21<!-- --</a><!-- --><br><!-- --<a href=
+	  3/15<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --</a><!-- --><br><!-- --<a href=
+      3/17<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
+      3/19<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
@@ -258,15 +258,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
+   </TR><!-- Week of 3/21 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  1/21<!-- --</a><!-- --><br><!-- --<a href=
+	  3/22<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --</a><!-- --><br><!-- --<a href=
+      3/24<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
+      3/26<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
@@ -275,15 +275,66 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
+   </TR><!-- Week of 3/28 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  1/21<!-- --</a><!-- --><br><!-- --<a href=
+	  3/29<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --</a><!-- --><br><!-- --<a href=
+      3/31<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
+      4/02<!-- --</a><!-- --></td>
+	  <TD width="15" align="center" valign=bottom">
+	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+      <TD align="left" valign="bottom">
+      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Test #2.</font><!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+   </TR><!-- Week of 4/04 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
+      <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
+	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
+	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
+	  4/05<!-- --</a><!-- --><br><!-- --<a href=
+      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
+      4/07<!-- --</a><!-- --><br><!-- --<a href=
+      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
+      4/09<!-- --</a><!-- --></td>
+	  <TD width="15" align="center" valign=bottom">
+	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+      <TD align="left" valign="bottom">
+      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>No class, registration day</font><!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+   </TR><!-- Week of 4/11 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
+      <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
+	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
+	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
+	  4/12<!-- --</a><!-- --><br><!-- --<a href=
+      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
+      4/14<!-- --</a><!-- --><br><!-- --<a href=
+      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
+      4/16<!-- --</a><!-- --></td>
+	  <TD width="15" align="center" valign=bottom">
+	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+      <TD align="left" valign="bottom">
+      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Lab report due.</font><!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+   </TR><!-- Week of 4/18 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
+      <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
+	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
+	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
+	  4/19<!-- --</a><!-- --><br><!-- --<a href=
+      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
+      4/21<!-- --</a><!-- --><br><!-- --<a href=
+      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
+      4/23<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
@@ -292,91 +343,23 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
+   </TR><!-- Week of 4/25 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  1/21<!-- --</a><!-- --><br><!-- --<a href=
+	  4/26<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --</a><!-- --><br><!-- --<a href=
+      4/28<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
+      4/30<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
-      <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  1/21<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
-	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
-      <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
-      <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  1/21<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
-	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
-      <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
-      <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  1/21<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
-	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
-      <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
-   </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
-      <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  1/21<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
-	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
-      <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Last day of class.</font><!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>No class, assessment day</font><!--end comment--></td>  
   </TR><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -End of table --- -->
 </TABLE></p>
 </BODY>
