Put up an empty assignment page for EGR 323 S21 	modified:   S21/323/323S21PS.HTM

--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/05/2021 4:30 pm)
+                              >(Last update: 1/12/2021 10:10 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -99,14 +99,13 @@ PS                                                           <BR>
         "https://dordt.instructure.com/files/184022607/download?download_frd=1"
         >9/07</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics: Frequency content of signals, amplifier<br>&nbsp; 
-		input resistance, output resistance, gain, dB, <br>&nbsp;
-        non-ideal operational amplifiers.              <br>&nbsp;
-        Read Chapter 1                                 <BR>&nbsp;
+        Topics: (TBA)                                  <br>&nbsp; 
+		                                               <br>&nbsp;
+                                                       <br>&nbsp;
+        Read: (TBA)                                    <BR>&nbsp;
                                                        <BR>&nbsp;
-        Do <DO>1.28, 1.36, 1.38, +1.45, D*1.55, 1.67,     <BR>&nbsp;
-        1.69, 1.74.</DO>                                    <br>&nbsp;
-        Note clarification of problem <a href=
+        Do <DO>(TBA)</DO>                              <BR>&nbsp;
+        <!--Note clarification of problem <a href=
         "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P49_A">+1.28</a>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
@@ -139,10 +138,9 @@ PS                                                           <BR>
         Topics: Review last semester.            <br>&nbsp;
         Read: As necessary from the textbook.            <BR>&nbsp;
                                                        <BR>&nbsp;
-        Do Problems <DO><!--+1.5, 1.6, +D*1.9, D1.13,      <BR>&nbsp;
-        1.15, 1.18, 1.21, +1.25.</DO> (See note 1 below.)    <BR>&nbsp;
+        Do Problems <DO>(To be assigned yet)</DO><BR>&nbsp;
 												  	   <br>&nbsp;
-        Note errata for Problems <a href=
+        <!--Note errata for Problems <a href=
         "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P46A">1.6</a>
 		and <a href=
 		"../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P49">1.25</a><br>&nbsp;
