Published slides for today 	modified:   S21/323/323S21DN.HTM

--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -94,9 +94,9 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  &nbsp;<!-- --</a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files/141359539/download?download_frd=1"><!-- -->
-      &nbsp;<!-- --</a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files/141528381/download?download_frd=1"><!-- -->
-      1/15<!-- --</a><!-- --></td>
+      &nbsp;<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/196077696/download?download_frd=1"><!-- -->
+      1/15<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
@@ -104,7 +104,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>First day of class.</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Intro to the course, Review Ch 1 and 2. &nbsp; <font color=grey>(First day of class.)</font><!--end comment--></td>  
    </TR><!-- Week of 1/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
