Fixed a typo in 323 PS#1 	modified:   S21/323/323S21PS.HTM

--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -124,7 +124,7 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
 		Click the due date (link) to turn your work in <br>&nbsp;
 		electronically.  (Applies to all future        <br>&nbsp;
-		assignments as well.  See note 10 below.) --> 
+		assignments as well.  See note 10 below.)
 <!-- - - - - - - - - -BOTTOM-OF TABLE- - - - - - -  --></TD></TR>
 </TABLE>
 <BR>
